tests/baselines/reference/assignmentToObject.errors.txt
tests/cases/compiler/assignmentToObject.ts(3,5): error TS2322: Type '{ toString: 数字; }' is not assignable to type 'Object'.
  Types of property 'toString' are incompatible.
    Type '数字' is not assignable to type '() => 文字'.


==== tests/cases/compiler/assignmentToObject.ts (1 errors) ====
    var a = { toString: 5 };
    var b: {} = a;  // ok
    var c: Object = a;  // should be error
        ~
!!! error TS2322: Type '{ toString: 数字; }' is not assignable to type 'Object'.
!!! error TS2322:   Types of property 'toString' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '() => 文字'.
    